Remove libraries. Add androidx

--- a/datasender/src/main/AndroidManifest.xml
+++ b/datasender/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application>
-        <activity android:name=".DataSenderAuthActivity" />
+        <activity android:name=".DataSenderAuthActivity"
+            android:theme="@style/Theme.Transparent"/>
     </application>
 </manifest>
