Remove androidx from all libraries.

--- a/firebaseauth/build.gradle
+++ b/firebaseauth/build.gradle
@@ -12,8 +12,6 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
     }
 
     buildTypes {
@@ -27,9 +25,10 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-    api 'com.firebaseui:firebase-ui-auth:4.3.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    //import
+    api 'com.firebaseui:firebase-ui-auth:4.3.1'
 }
 repositories {
     mavenCentral()
