--- a/datasender/build.gradle
+++ b/datasender/build.gradle
@@ -12,8 +12,6 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
     }
 
     buildTypes {
@@ -31,11 +29,9 @@ dependencies {
     compile project(':firebaseauth')
     compile project(':parkinsonlibrary')
 
-
+    //import
     implementation 'android.arch.work:work-runtime:1.0.1'
-
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
-
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
 
 }
