--- a/datasender/build.gradle
+++ b/datasender/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation 'android.arch.work:work-runtime:1.0.1'
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
 
 }
 
