--- a/firebaseauth/build.gradle
+++ b/firebaseauth/build.gradle
@@ -28,7 +28,10 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     //import
-    api 'com.firebaseui:firebase-ui-auth:4.3.1'
+    api 'com.google.firebase:firebase-auth:17.0.0'
+    implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+
 }
 repositories {
     mavenCentral()
