--- a/parkinsonlibrary/src/main/AndroidManifest.xml
+++ b/parkinsonlibrary/src/main/AndroidManifest.xml
@@ -7,5 +7,8 @@
 
     <application>
         <service android:name=".rotation.RotationDetectorService" />
+        <activity
+            android:name=".coordinate.LocationPermissionsActivity"
+            android:theme="@style/Theme.Transparent" />
     </application>
 </manifest>
