--- a/parkinsonlibrary/build.gradle
+++ b/parkinsonlibrary/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     //import
+    implementation 'android.arch.work:work-runtime:1.0.1'
     implementation 'android.arch.persistence.room:runtime:1.1.1'
     kapt 'android.arch.persistence.room:compiler:1.1.1'
     implementation 'com.android.support:appcompat-v7:28.0.0'
