--- a/datasender/build.gradle
+++ b/datasender/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     compile project(':parkinsonlibrary')
 
     //import
-    implementation 'android.arch.work:work-runtime:1.0.1'
+    api 'android.arch.work:work-runtime:1.0.1'
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.android.support:appcompat-v7:28.0.0'
